CHORE Add H1 Title with secondary H2 Title (WEB-3)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Git Crash Course</h1>
+        <h2>Youtube</h2>
+    </header>
 </body>
 </html>
